--- a/index.ipynb
+++ b/index.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "Type your answer below this line:\n",
     "_______________________________________________________________________________________________________________________________\n",
-    "\n",
+    "The four main datatypes in SQLite3 are integer (ie. whole numbers), text (ie. strings), real (ie. floats) and blob (other datatypes like binary information).  Other common types of data are usable as they will be lumped into one of these main 4 datatypes.\n",
     "\n",
     "\n",
     "\n",
@@ -33,7 +33,7 @@
     "\n",
     "Type your answer below this line:\n",
     "_______________________________________________________________________________________________________________________________\n",
-    "\n",
+    "Primary keys are keys unique to a given table.  Foreign keys are a column in a table that refer to primary keys of another table.  We can use foreign keys to join the primary keys of seperate tables.\n",
     "\n",
     "\n",
     "\n",
@@ -44,7 +44,7 @@
     "\n",
     "Type your answer below this line:\n",
     "_______________________________________________________________________________________________________________________________\n",
-    "\n",
+    "There are three types of relationships between entities in a SQL database.  They are one-to-one, one-to-many, and many-to-many.  A one-to-one relationship means that each key relates to only one other key in a separate table.  A one-to-many relationship is a little more complex.  This involves one key in a table referencing multiple keys in a seperate table.  For example, one table may refer to an office using an office code, but in a seperate table there can be several employees who each are assigned to this office code.  The single office code key refers to many employees in a seperate table.  Finally there is the many-to-many relationship.  In this relationship there are several keys between tables that reference each other.  For example, imagine a table that lists offices in several cities.  In a separate table there is a list of customers in each of those cities.  This is a many-to-many relationship as the city column can reference each office and each customer.\n",
     "\n",
     "## Question 4\n",
     "\n",
@@ -52,7 +52,7 @@
     "\n",
     "Type your answer below this line:\n",
     "_______________________________________________________________________________________________________________________________\n",
-    "\n",
+    "There are 4 types of JOINs with SQL.  The first is an inner join.  This type will return any keys that are found in both tables.  Then there is the left join, which takes the entirety of the left table and adds any matching keys from the right table.  A default join command is a left join.  Next is the right join, which is the inverse of the left join.  The entire right table is returned with any matching keys from the left table.  Finally, there is the outer join which is the inverse of the inner join.  It will return any keys that are unique to one of the tables.\n",
     "\n",
     "\n",
     "## Question 5\n",
@@ -61,7 +61,7 @@
     "\n",
     "Type your answer below this line:\n",
     "_______________________________________________________________________________________________________________________________\n",
-    "\n",
+    "Aggregate functions are a convenient way of calculating sums, averages and counts of information stored within tables.  Group by statements allow us to take information stored within a table and sort it into like categories.  By combining the two of these together, we are able to compute the aggregate functions of groups, rather than the aggregate functions of the entire table.  For instance, we can compute the average count of employees who work in each city, rather than just the count of all of the employees. \n",
     "\n",
     "\n",
     "## Question 6\n",
@@ -71,7 +71,7 @@
     "\n",
     "Type your answer below this line:\n",
     "_______________________________________________________________________________________________________________________________\n",
-    "\n",
+    "A JOIN table is a table created to keep track of all of the connections in a many-to-many join.  It will store each key from one table and reference each key from a second table that matches the key from the frist table.  It effectively turns a many-to-many join into multiple one-to-many joins.\n",
     "\n",
     "\n",
     "## Summary\n",
@@ -96,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
